<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/sky_blue"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="cursive"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Full_name_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Heading"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/full_name_label"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/full_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Full_name_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:autofillHints="Name"
            android:background="@drawable/edit_box"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:autofillHints="Email"
            android:background="@drawable/edit_box"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/Phone_no"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="21dp"
            android:autofillHints="Email"
            android:background="@drawable/edit_box"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            android:padding="6dp" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/address"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_address"
            android:inputType="textPostalAddress"
            android:padding="6dp"
            android:autofillHints="Address"
            android:background="@drawable/edit_box"/>
        <TextView
            android:id="@+id/password_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:autofillHints="Password"
            android:background="@drawable/edit_box"/>
        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/confirm_password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_password1"
            android:inputType="textPassword"
            android:padding="6dp"
            android:autofillHints="Password"
            android:background="@drawable/edit_box"/>

        <Button
            android:id="@+id/Register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password_input"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bg"
            android:progress="0"
            android:visibility="gone"/>


    </RelativeLayout>
</ScrollView>