<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/sky_blue"
    android:fillViewport="true">
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@color/black">

          <TextView
              android:id="@+id/LoHead"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fontFamily="cursive"
              android:text="@string/login"
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textSize="45sp"
              android:textStyle="bold" />

        <TextView
            android:id="@+id/email_Login_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LoHead"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_Login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_Login_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:autofillHints="Email"
            android:background="@drawable/edit_box"/>
        <TextView
            android:id="@+id/password_Login_label"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_Login_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/password_Login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_Login_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:autofillHints="Password"
            android:background="@drawable/edit_box"/>

          <Button
              android:id="@+id/Login_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/password_Login_input"
              android:layout_centerHorizontal="true"
              android:layout_marginHorizontal="20dp"
              android:layout_marginTop="60dp"
              android:text="@string/login" />
          <ProgressBar
              android:id="@+id/Login_progress_bar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:indeterminate="true"
              android:indeterminateDrawable="@drawable/progress_bg"
              android:progress="0"
              android:visibility="gone"/>
      </RelativeLayout>
</ScrollView>